--- a/package.json
+++ b/package.json
@@ -10,20 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.21.2",
+    "@nivo/heatmap": "^0.88.0",
+    "@types/react-leaflet": "^2.8.3",
+    "@uiw/react-heat-map": "^2.3.2",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.9.4",
     "pandas": "^0.0.3",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-heatmap-grid": "^0.9.1",
+    "react-router-dom": "^6.28.1",
     "recharts": "^2.12.2"
   },
   "devDependencies": {
